...
                {listing.status === 'claimed' ? 'Item Claimed' : 'Item Sold'}
              </Text>
            </View>
          ) : (
          <View style={styles.actionBar}>
            <TouchableOpacity
              testID="listing-edit-button"
              style={[styles.actionButton, styles.editButton]}
              onPress={() =>
                router.push(
                  `/create-listing?id=${listing.id}&type=${
                    type === 'buy_nothing' ? 'buy_nothing' : 'listing'
                  }`
...
